Добавлен gitignore и переименнована папка проекта

--- a/ConsoleMatch3/Game Forest.csproj
+++ b/ConsoleMatch3/Game Forest.csproj
@@ -8,4 +8,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="MouseKeyHook" Version="5.7.1" />
+  </ItemGroup>
+
 </Project>
